--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
           <option value="other">Other</option>
         </select>
       </fieldset>
-
+	    
+      <input type="text" id="other-title" placeholder="Your Job Role"  name="user_otherJob">
+	    
       <fieldset class="shirt">
         <legend>T-Shirt Info</legend>
 
